--- a/src/stylesheets/components/viewer/_icons.scss
+++ b/src/stylesheets/components/viewer/_icons.scss
@@ -114,7 +114,7 @@
 		}
 	}
 
-	.close {
+	.findClose {
 		@include icon($findbar-close-btn-icon, $findbar-close-btn-icon-size);
 	}
 }
