--- a/src/stylesheets/components/viewer/_toolbar.scss
+++ b/src/stylesheets/components/viewer/_toolbar.scss
@@ -29,6 +29,7 @@
 		display: flex;
 		justify-content: space-between;
 		height: $toolbar-height;
+		padding-inline-end: var(--toolbarPlaceholderWidth);
 	}
 
 	#toolbarViewerLeft,
