--- a/src/stylesheets/themes/_light-darwin.scss
+++ b/src/stylesheets/themes/_light-darwin.scss
@@ -183,11 +183,9 @@ $findbar-split-toolbar-btn-wrap-containers-margin: 0 33px 0 8px;
 
 $findbar-toolbar-label-margin: 0 11px 0 0;
 
-$find-results-count-margin: 0 11px 0 4px;
 $find-results-count-color: #777;
 
-$find-message-margin: 0 11px 0 4px;
-$find-message-wrap-containers-margin: 2px 11px 8px 4px;
+$find-message-margin: 2px 11px 8px 4px;
 $find-message-color: rgba(#777, 0.5);
 
 $findbar-close-container-offset-x: 4px;
